[gd_scene load_steps=6 format=3 uid="uid://drfnsxi54q7yo"]

[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ContainmentContainer/parts/SCPDetails/scp_details.gd" id="1_msblh"]
[ext_resource type="LabelSettings" uid="uid://cwas73lpm1tqt" path="res://Fonts/game/label_medium.tres" id="2_x8ud6"]
[ext_resource type="LabelSettings" uid="uid://bhvjm3opd1txx" path="res://Fonts/game/label_small.tres" id="3_a402l"]
[ext_resource type="Texture2D" uid="uid://ci63y150nrl57" path="res://Media/images/safe-euclid-keter-icons-v0-bk4m6sye843c1.png" id="4_683d7"]
[ext_resource type="Texture2D" uid="uid://b6d0wadq4hrkv" path="res://Media/scps/the_door.png" id="5_tmkf4"]

[node name="Details" type="PanelContainer"]
custom_minimum_size = Vector2(500, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_msblh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="DetailsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/DetailsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/DetailsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Item" type="HBoxContainer" parent="MarginContainer/VBoxContainer/DetailsContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/DetailsContainer/HBoxContainer/VBoxContainer/Item"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "ITEM #:"
label_settings = ExtResource("3_a402l")

[node name="ItemLabel" type="Label" parent="MarginContainer/VBoxContainer/DetailsContainer/HBoxContainer/VBoxContainer/Item"]
layout_mode = 2
size_flags_horizontal = 3
text = "SCP-001-P"
label_settings = ExtResource("2_x8ud6")
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/DetailsContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/DetailsContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "OBJECT CLASS:"
label_settings = ExtResource("3_a402l")

[node name="ObjectLabel" type="Label" parent="MarginContainer/VBoxContainer/DetailsContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "PENDING"
label_settings = ExtResource("3_a402l")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/DetailsContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("4_683d7")
expand_mode = 1
stretch_mode = 5

[node name="ContainmentContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/ContainmentContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ContainmentContainer"]
layout_mode = 2
text = "SPECIAL CONTAINMNET PROCEDURES:"
label_settings = ExtResource("3_a402l")

[node name="ContainmentLabel" type="Label" parent="MarginContainer/VBoxContainer/ContainmentContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_vertical = 1
text = "Lorem ipsum odor amet, consectetuer adipiscing elit. Ante bibendum convallis massa ac phasellus rutrum metus ad. Amus curae justo nascetur tempus placerat integer est. Mauris nisl mauris, etiam duis magnis ultrices. Suspendisse ex nulla finibus consequat curae tellus molestie arcu. Dictumst turpis malesuada conubia fusce mollis libero vel maecenas. Magnis imperdiet maximus sociosqu est parturient mi. Aliquam aliquet facilisis scelerisque non pulvinar adipiscing ex."
label_settings = ExtResource("3_a402l")
autowrap_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DescriptionContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer2/DescriptionContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/DescriptionContainer"]
layout_mode = 2
text = "DESCRIPTION:"
label_settings = ExtResource("3_a402l")

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/DescriptionContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_vertical = 1
text = "Lorem ipsum odor amet, consectetuer adipiscing elit. Ante bibendum convallis massa ac phasellus rutrum metus ad. Amus curae justo nascetur tempus placerat integer est. Mauris nisl mauris, etiam duis magnis ultrices. Suspendisse ex nulla finibus consequat curae tellus molestie arcu. Dictumst turpis malesuada conubia fusce mollis libero vel maecenas. Magnis imperdiet maximus sociosqu est parturient mi. Aliquam aliquet facilisis scelerisque non pulvinar adipiscing ex."
label_settings = ExtResource("3_a402l")
autowrap_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_tmkf4")
expand_mode = 1
stretch_mode = 6
